# letterlens

./: .gitignore  package-lock.json  package.json
backend/: .env  pyproject.toml
backend/src/: main.py
backend/src/api/routes/: movies.py
backend/src/core/: config.py  factory.py
backend/src/middlewares/: auth.py
backend/src/services/: movie_service.py
client/: index.html  package-lock.json
client/src/: App.jsx
server/: package-lock.json  package.json
server/src/: app.js  server.js
server/src/config/: config.js
server/src/controllers/: movieController.js
server/src/routes/: movieRoutes.js
server/src/utils/: jwt.js
