[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
pydantic-settings = "^2.4.0"
pyjwt = "^2.9.0"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
